[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "chromadb>=1.0.7",
    "fpdf>=1.7.2",
    "matplotlib>=3.10.1",
    "numpy>=2.2.5",
    "opencv-python>=4.11.0.86",
    "pandas>=2.2.3",
    "pdf2image>=1.17.0",
    "pillow>=11.2.1",
    "plotly>=6.0.1",
    "pytesseract>=0.3.13",
    "streamlit>=1.44.1",
]
